--- a/project.html
+++ b/project.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
         <meta charset="utf-8" >
         <meta name="keywords" content="be ux" >
         <meta name="description" content="learn html,css,js">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> be ux  </title>
 
       <!-- font -->
